--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
-}
+.productcart{
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: black;
   color: white;
+  display: flex;
+ 
+  width: 350px;
+  height: 500px;
+  margin-top: 50px;
+  flex-direction: column;
+  border-radius: 15px;
+  box-shadow: 0px 0px 6px gray;
+  font-size: large;
+  align-items: center;
+  
+}
+.MainWrapper{
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.viewMore{
+  width: 100px;
+  height: 30px;
+  padding: 4px;
+  border-radius: 6px;
+  background-color:aqua;
+  color: black;
+  border: 1px solid  white;
+  font-weight: bold;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
